[package]
name = "to_mut"
version = "0.1.0"
edition = "2021"
description = "Convert immutable reference to mutable reference."
author = "Bruce0203 <brucefreedy@gmail.com>"
repository = "https://github.com/Bruce0203/to_mut"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.68", features = ["full"] }
